<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".AddProductActivity"
>
    <TextView
            android:text="@string/add_product_activity_label_text"
            android:layout_width="match_parent"
            android:layout_height="50dp" android:id="@+id/activityLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="40dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAlignment="center"
    />

    <TextView
            android:text="Отображение ошибки"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:id="@+id/errorView"
            app:layout_constraintTop_toBottomOf="@id/activityLabel"
            app:layout_constraintLeft_toLeftOf="@id/activityLabel"
            android:layout_marginTop="40dp"
    />
    <AutoCompleteTextView
            android:hint="@string/add_product_title_label"
            android:layout_width="match_parent"
            android:layout_height="42dp" android:id="@+id/titleEdit"
            tools:layout_editor_absoluteY="81dp" tools:layout_editor_absoluteX="18dp"
            app:layout_constraintTop_toBottomOf="@id/errorView"
            app:layout_constraintLeft_toLeftOf="@id/activityLabel"
            android:layout_marginTop="10dp"
    />
    <EditText
            android:hint="@string/add_product_cost_label"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="numberDecimal"
            android:id="@+id/costEdit" tools:layout_editor_absoluteY="166dp"
            tools:layout_editor_absoluteX="18dp"
            app:layout_constraintTop_toBottomOf="@id/titleEdit"
            app:layout_constraintLeft_toLeftOf="@id/activityLabel"
            android:layout_marginTop="10dp"
    />
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="60dp" tools:layout_editor_absoluteX="18dp" android:id="@+id/categorySpinner"
            tools:layout_editor_absoluteY="252dp"
            app:layout_constraintTop_toBottomOf="@id/costEdit"
            app:layout_constraintLeft_toLeftOf="@id/activityLabel"
            android:layout_marginTop="10dp"
    />
    <Button
            android:text="@string/save_button_text"
            android:layout_width="match_parent"
            android:layout_height="50dp" android:id="@+id/saveButton" tools:layout_editor_absoluteY="372dp"
            tools:layout_editor_absoluteX="18dp"
            app:layout_constraintTop_toBottomOf="@id/categorySpinner"
            app:layout_constraintLeft_toLeftOf="@id/activityLabel"
            android:layout_marginTop="100dp"
            android:onClick="onSaveButtonClick"
    />
    <Button
            android:text="@string/cancel_button_text"
            android:layout_width="match_parent"
            android:layout_height="50dp" android:id="@+id/cancelButton" tools:layout_editor_absoluteY="454dp"
            tools:layout_editor_absoluteX="19dp"
            app:layout_constraintTop_toBottomOf="@id/saveButton"
            app:layout_constraintLeft_toLeftOf="@id/activityLabel"
            android:layout_marginTop="10dp"
            android:onClick="onCancelAddButtonClick"
    />

</androidx.constraintlayout.widget.ConstraintLayout>