<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CalculatorActivity">
    <RelativeLayout
            android:id="@+id/navigationLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/productsListView"
            android:orientation="horizontal"
            android:layout_width="fill_parent" android:layout_height="50dp">
        <Button
                android:text="@string/products_tab_name"
                android:id="@+id/productsButton"
                android:layout_width="133dp"
                android:textSize="12sp"
                android:layout_height="match_parent"
                android:onClick="onProductsListActivityButtonClick"
        />
        <Button
                android:text="@string/categories_tab_name"
                android:id="@+id/categoriesButton"
                android:layout_width="133dp"
                android:textSize="12sp"
                android:layout_height="match_parent"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:layout_toRightOf="@id/productsButton"
                android:onClick="onCategoriesListActivityButtonClick"
        />
        <Button
                android:text="@string/calculator_tab_name"
                android:id="@+id/calculatorButton"
                android:layout_width="133dp"
                android:textSize="12sp"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/categoriesButton"
                android:backgroundTint="@color/purple_200"
        />

    </RelativeLayout>
    <ListView
            android:id="@+id/productsListView"
            android:layout_width="match_parent"
            android:layout_height="630dp"
            app:layout_constraintTop_toBottomOf="@id/navigationLayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:choiceMode="singleChoice"
    >
    </ListView>
    <RelativeLayout
            android:layout_width="match_parent" android:layout_height="50dp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    >
        <TextView
                android:id="@+id/massTextView"
                android:text="@string/summary_mass_default"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_width="200dp" android:layout_height="match_parent" />
        <TextView
                android:id="@+id/totalCostTextView"
                android:text="@string/summary_total_cost_default"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_width="200dp" android:layout_height="match_parent"
                android:layout_toRightOf="@id/massTextView"
        />
    </RelativeLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="@id/productsListView"
            android:layout_marginBottom="150dp"
            android:layout_marginRight="50dp"
            android:clickable="false" app:srcCompat="@android:drawable/ic_menu_delete"
            android:id="@+id/deleteButton"
            android:onClick="onDeleteFromCalculatorButtonClick"
            android:visibility="invisible"
            android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/deleteButton"
            app:layout_constraintRight_toRightOf="@id/productsListView"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:clickable="false" app:srcCompat="@android:drawable/ic_menu_revert"
            android:id="@+id/cancelSelectionButton"
            android:onClick="onCancelSelectionButtonClick"
            android:visibility="invisible"
            android:focusable="true"/>


</androidx.constraintlayout.widget.ConstraintLayout>