<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CategoriesListActivity"
>
    <RelativeLayout
            android:id="@+id/navigationLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/categoriesListView"
            android:orientation="horizontal"
            android:layout_width="fill_parent" android:layout_height="50dp"
    >
        <Button
                android:text="@string/products_tab_name"
                android:id="@+id/productsButton"
                android:layout_width="133dp"
                android:textSize="12sp"
                android:layout_height="match_parent"
                app:iconPadding="8dp" app:iconSize="25dp"
                android:onClick="onProductsListActivityButtonClick"
        />
        <Button
                android:text="@string/categories_tab_name"
                android:id="@+id/categoriesButton"
                android:layout_width="133dp"
                android:textSize="12sp"
                android:layout_height="match_parent"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:layout_toRightOf="@id/productsButton"
                android:backgroundTint="@color/purple_200"
        />
        <Button
                android:text="@string/calculator_tab_name"
                android:id="@+id/calculatorButton"
                android:layout_width="133dp"
                android:textSize="12sp"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/categoriesButton"
                android:onClick="onCalculatorActivityButtonClick"
        />

    </RelativeLayout>
    <ListView
            android:id="@+id/categoriesListView"
            android:layout_width="match_parent"
            android:layout_height="590dp"
            app:layout_constraintTop_toBottomOf="@id/navigationLayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:choiceMode="singleChoice"
            tools:layout_editor_absoluteY="50dp">
    </ListView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="155dp"
            android:clickable="true" app:srcCompat="@android:drawable/ic_input_add"
            android:id="@+id/addButton" tools:layout_editor_absoluteY="448dp"
            tools:layout_editor_absoluteX="304dp"
            android:onClick="onAddCategoryButtonClick"
            android:focusable="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="155dp"
            android:clickable="false" app:srcCompat="@android:drawable/ic_menu_delete"
            android:id="@+id/deleteButton"
            android:onClick="onDeleteButtonClick"
            android:visibility="invisible"
            android:focusable="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/deleteButton"
            app:layout_constraintLeft_toRightOf="@id/deleteButton"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="15dp"
            android:clickable="false" app:srcCompat="@android:drawable/ic_menu_revert"
            android:id="@+id/cancelSelectionButton"
            android:onClick="onCancelSelectionButtonClick"
            android:visibility="invisible"
            android:focusable="true"/>


</androidx.constraintlayout.widget.ConstraintLayout>